[package]
name = "mime_multipart"
version = "0.6.1"
description = "MIME multipart parsing, construction, and streaming"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/mime-multipart"
documentation = "https://mikedilger.github.io/mime-multipart"
license = "MIT OR Apache-2.0"
keywords = ["mime", "multipart", "mixed"]
edition = "2018"

[dependencies]
hyper = { version = "0.10", default-features = false }
mime = "0.2"
httparse = "1.3"
textnonce = "1.0"
log = "0.4"
encoding = "0.2"
buf-read-ext = "0.4"
tempfile = "3.4.0"
